--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/*
 *.iws
 *.iml
 *.ipr
@@ -49,3 +46,4 @@ bin/
 /.idea/workspace.xml
 /.idea/vcs.xml
 /.idea/checkstyle-idea.xml
+/gradle/wrapper/gradle-wrapper.properties
